--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -8,8 +8,8 @@
 	"main": "src/index.ts",
 	"compatibility_date": "2025-07-12",
 	"observability": {
-		"enabled": true
-	}
+		"enabled": true,
+	},
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
