--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,7 +6,8 @@
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "realworld-effect-api",
   "main": "src/index.ts",
-  "compatibility_date": "2025-07-12",
+  "compatibility_date": "2025-07-09",
+  "compatibility_flags": ["nodejs_compat"],
   "observability": {
     "enabled": true,
   },
